--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -49,6 +49,10 @@ a {
   width: 100%;
 }
 
+.no-vertical-scroll {
+  overflow-y: hidden;
+}
+
 .body-opacity {
   background: black;
   position: fixed;
