refactor(templates): reorganize structure
- Use doc template for app page
- Relocate components
- Pick template based on property defined in frontmatter
- Colocate app images with content

--- a/src/styles/components/image_slider.scss
+++ b/src/styles/components/image_slider.scss
@@ -99,6 +99,7 @@
     width: 1rem;
     color: $white;
     margin-bottom: 0;
+    text-transform: capitalize;
 
     @include breakpoint(medium up) {
       width: 1.75rem;
