--- a/src/styles/components/documentation.scss
+++ b/src/styles/components/documentation.scss
@@ -83,7 +83,7 @@
     font-weight: 400;
   }
 
-  a {
+  &__link {
     font-weight: 400;
     font-size: 1rem;
     color: $main-green;
@@ -91,6 +91,7 @@
 
     &:hover {
       color: $main-green;
+      cursor: pointer;
     }
   }
 
