--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -24,10 +24,16 @@
   &_contact {
     color: #6db24f;
     text-decoration: underline;
+    background-color: unset;
+    font-size: unset;
+    padding: 0;
+    margin: 0;
+    vertical-align: initial;
 
     &:hover,
     &:focus {
       color: #5d9a43;
+      background-color: unset;
     }
 
     &:hover {
