--- a/src/styles/components/call_summary.scss
+++ b/src/styles/components/call_summary.scss
@@ -1,6 +1,6 @@
 .call-summary {
-  color: #555;
-  background-color: inherit;
+  color: #777;
+  background-color: #fafafa;
 
   tr {
     vertical-align: middle;
