--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@
 
 @import 'components/app';
 @import 'components/apps';
-@import 'components/breadcrumbs';
+@import 'components/breadcrumbs_wrapper';
 @import 'components/button';
 @import 'components/call_summary';
 @import 'components/comments';
