refactor: use anchor instead of button

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@
 @import 'components/button';
 @import 'components/call_summary';
 @import 'components/comments';
+@import 'components/contact_toggle';
 @import 'components/content_nav';
 @import 'components/content_sublist';
 @import 'components/developers_thumbs';
