Reverted some unwanted style changes

--- a/src/styles/components/content_sublist.scss
+++ b/src/styles/components/content_sublist.scss
@@ -1,5 +1,6 @@
 .content-sublist {
-  margin: 0.2rem 1rem 0 1.75rem;
+  margin-left: 1.7rem;
+  margin-top: 0.2rem;
   list-style: none;
 
   li a {
