--- a/src/styles/components/feedback.scss
+++ b/src/styles/components/feedback.scss
@@ -6,13 +6,36 @@
     @include flex-grid-row();
     align-items: center;
     padding: 1.6rem 1rem;
+  }
+
+  &__title-wrapper {
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      cursor: pointer;
+    }
 
     &_highlighted {
       color: $main-green;
     }
   }
 
-  &__paragraph {
+  &__title-icon {
+    display: flex;
+    height: 1.25rem;
+    width: 1.25rem;
+    margin-right: 0.6rem;
+    border-radius: 50%;
+    background-color: #777;
+    color: $white;
+  }
+
+  &__title-wrapper_highlighted &__title-icon {
+    background-color: $main-green;
+  }
+
+  &__title {
     font-weight: 600;
     margin-bottom: 0;
   }
@@ -43,7 +66,6 @@
 
   &__contact-button {
     color: $main-green;
-    font-weight: 600;
 
     &:hover,
     &:active {
@@ -53,7 +75,6 @@
   }
 
   &__link {
-    font-weight: 600;
     margin: auto 0.2rem;
   }
 
@@ -71,29 +92,6 @@
       width: 6px;
       border-radius: 50%;
       background-color: #555;
-    }
-  }
-
-  &__expand-button-wrapper {
-    display: flex;
-    align-items: center;
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
-
-  &__expand-button {
-    display: flex;
-    height: 1.25rem;
-    width: 1.25rem;
-    margin-right: 0.6rem;
-    border-radius: 50%;
-    background-color: #777;
-    color: $white;
-
-    &_highlighted {
-      background-color: $main-green;
     }
   }
 }
