--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,9 +1,11 @@
-//colors
-$main-green: #6db24f;
-$dark-gray-color: #333333;
-$gray-nav: #777777;
-$gray-color: #999999;
-$gray-standard: #cccccc;
-$white-color: #ffffff;
+// Colors
+$green: #6db24f;
+$dark-gray: #333333;
+$dim-gray: #555555;
+$gray: #777777;
+$light-gray: #999999;
+$silver-gray: #cccccc;
+
+// Spacing
 $block-padding: 4.688rem;
 $row-padding: 7.5rem;
