--- a/src/styles/components/documentation.scss
+++ b/src/styles/components/documentation.scss
@@ -31,7 +31,7 @@
   }
 
   h1 {
-    color: #333333;
+    color: $dark-gray;
     font-weight: bold;
     font-size: 2.625rem;
     position: relative;
@@ -48,12 +48,12 @@
       margin: 10px auto;
       width: 15%;
       height: 3px;
-      background: #6db24f;
+      background: $green;
     }
   }
 
   h2 {
-    color: #555555;
+    color: $dim-gray;
     font-size: 1.563rem;
     text-align: left;
     font-weight: 600;
@@ -61,7 +61,7 @@
   }
 
   h3 {
-    color: #777777;
+    color: $gray;
     font-weight: 500;
     font-size: 1rem;
     text-transform: uppercase;
@@ -70,7 +70,7 @@
   }
 
   h4 {
-    color: #777777;
+    color: $gray;
     font-weight: 500;
     font-size: 1rem;
     margin: 0.5rem 0;
@@ -86,11 +86,11 @@
   a {
     font-weight: 400;
     font-size: 1rem;
-    color: $main-green;
+    color: $green;
     text-decoration: underline;
 
     &:hover {
-      color: $main-green;
+      color: $green;
       cursor: pointer;
     }
   }
@@ -104,7 +104,7 @@
   li {
     font-size: 1rem;
     font-weight: 400;
-    color: #555555;
+    color: $dim-gray;
   }
 
   ul li {
@@ -117,7 +117,7 @@
       content: '';
       width: 4px;
       height: 4px;
-      background: #777777;
+      background: $gray;
       border-radius: 50%;
       left: 0;
       position: absolute;
@@ -133,8 +133,8 @@
     padding: 2.5rem 1.25rem;
     margin: 1.5rem auto;
     background-color: #fbfbfb;
-    border-top: 1px solid $gray-color;
-    border-bottom: 1px solid $gray-color;
+    border-top: 1px solid $light-gray;
+    border-bottom: 1px solid $light-gray;
     font-family: Consolas, 'Liberation Mono', Courier, monospace;
     font-weight: normal;
 
