--- a/src/styles/components/feedback.scss
+++ b/src/styles/components/feedback.scss
@@ -17,7 +17,7 @@
     }
 
     &_highlighted {
-      color: $main-green;
+      color: $green;
     }
   }
 
@@ -32,7 +32,7 @@
   }
 
   &__title-wrapper_highlighted &__title-icon {
-    background-color: $main-green;
+    background-color: $green;
   }
 
   &__title {
@@ -65,7 +65,7 @@
   }
 
   &__contact-button {
-    color: $main-green;
+    color: $green;
 
     &:hover,
     &:active {
