--- a/src/styles/components/footer_menu.scss
+++ b/src/styles/components/footer_menu.scss
@@ -12,7 +12,7 @@
     &:after {
       width: 3px;
       height: 3px;
-      background: $gray-standard;
+      background: $silver-gray;
       display: inline-block;
       content: '';
       border-radius: 50%;
