--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -8,7 +8,7 @@
     width: 100%;
     padding: 0;
     max-width: 100%;
-    background: $main-green;
+    background: $green;
   }
 
   &_padding {
@@ -67,12 +67,12 @@
   }
 
   &__in_green {
-    background: $main-green;
+    background: $green;
     padding-left: 0;
     padding-right: 0;
 
     &:before {
-      background: $main-green;
+      background: $green;
     }
 
     @include breakpoint(medium down) {
@@ -173,8 +173,8 @@
     background: $white;
 
     @include breakpoint(medium down) {
-      border-top: 1px solid $main-green;
-      border-bottom: 1px solid $main-green;
+      border-top: 1px solid $green;
+      border-bottom: 1px solid $green;
     }
   }
 
@@ -259,7 +259,7 @@
   }
 
   &__title {
-    color: $dark-gray-color;
+    color: $dark-gray;
     font-weight: bold;
     font-size: 2.625rem;
     position: relative;
@@ -275,7 +275,7 @@
       margin: 10px auto;
       width: 15%;
       height: 3px;
-      background: $main-green;
+      background: $green;
     }
   }
 
@@ -325,7 +325,7 @@
   }
 
   &__description {
-    color: $gray-color;
+    color: $light-gray;
     font-weight: 500;
     text-align: center;
     margin-top: 0;
@@ -336,21 +336,21 @@
   }
 
   &__description_black {
-    color: #555555;
+    color: $dim-gray;
   }
 
   &__description-title {
     width: 100%;
     display: inline-block;
-    color: #555555;
+    color: $dim-gray;
     font-weight: 600;
     font-size: 1.125rem;
   }
 
   &__description-link {
-    border-bottom: 1px solid $gray-standard;
+    border-bottom: 1px solid $silver-gray;
     display: inline-block;
-    color: $main-green;
+    color: $green;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
     line-height: 1;
@@ -358,14 +358,14 @@
     &:hover,
     &:active,
     &:focus {
-      border-bottom: 1px solid $gray-standard;
+      border-bottom: 1px solid $silver-gray;
       color: inherit;
       cursor: pointer;
     }
   }
 
   &__description-span {
-    color: $gray-color;
+    color: $light-gray;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
   }
@@ -421,7 +421,7 @@
   }
 
   &__small-title {
-    color: $dark-gray-color;
+    color: $dark-gray;
     font-weight: bold;
     font-size: 1.5rem;
     position: relative;
