--- a/src/styles/components/topbar_menu.scss
+++ b/src/styles/components/topbar_menu.scss
@@ -9,7 +9,7 @@
     &:after {
       width: 3px;
       height: 3px;
-      background: $gray-standard;
+      background: $silver-gray;
       display: inline-block;
       content: '';
       border-radius: 50%;
@@ -28,14 +28,14 @@
     padding-left: 0.3rem;
     padding-right: 0.4rem;
     font-size: 0.9375rem;
-    color: $gray-nav;
+    color: $gray;
 
     &:hover {
-      color: $main-green;
+      color: $green;
     }
   }
 
   &__link_active {
-    color: $main-green;
+    color: $green;
   }
 }
