--- a/src/styles/components/feedback.scss
+++ b/src/styles/components/feedback.scss
@@ -1,6 +1,6 @@
 .feedback {
   background-color: $white;
-  color: #555;
+  color: $dim-gray;
 
   &__section {
     @include flex-grid-row();
@@ -27,7 +27,7 @@
     width: 1.25rem;
     margin-right: 0.6rem;
     border-radius: 50%;
-    background-color: #777;
+    background-color: $gray;
     color: $white;
   }
 
@@ -91,7 +91,7 @@
       height: 6px;
       width: 6px;
       border-radius: 50%;
-      background-color: #555;
+      background-color: $dim-gray;
     }
   }
 }
