--- a/src/styles/components/content_sublist.scss
+++ b/src/styles/components/content_sublist.scss
@@ -4,18 +4,18 @@
   list-style: none;
 
   li a {
-    color: $dim-gray;
+    color: $hr-dim-gray;
     font-weight: 400;
     font-size: 0.9375rem;
     display: inline-block;
     width: 100%;
 
     &:hover {
-      color: $green;
+      color: $hr-green;
     }
   }
 
   li a.active {
-    color: $green;
+    color: $hr-green;
   }
 }
