--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import 'base/_constants';
+
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
 @import 'node_modules/font-awesome/scss/font-awesome';
 
@@ -5,8 +7,7 @@
 @import 'plugins/foundation/foundation';
 @include foundation-everything($flex: true);
 
-@import 'base/_base';
-@import 'base/_variables';
+@import 'base/_reset';
 
 @import 'components/app';
 @import 'components/apps';
