--- a/src/styles/components/faq.scss
+++ b/src/styles/components/faq.scss
@@ -1,6 +1,6 @@
 .faq {
   h4 {
-    color: $dark-gray;
+    color: $hr-dark-gray;
     font-weight: bold;
     font-size: 1.5rem;
     position: relative;
@@ -24,7 +24,7 @@
   h5 {
     width: 100%;
     display: inline-block;
-    color: $dim-gray;
+    color: $hr-dim-gray;
     font-weight: 600;
     font-size: 1rem;
     margin-bottom: 0.15rem;
@@ -33,7 +33,7 @@
 
   p {
     text-align: left;
-    color: $light-gray;
+    color: $hr-light-gray;
     font-weight: 400;
     margin-bottom: 2rem;
   }
