--- a/src/styles/components/feedback.scss
+++ b/src/styles/components/feedback.scss
@@ -1,6 +1,6 @@
 .feedback {
   background-color: $white;
-  color: $dim-gray;
+  color: $hr-dim-gray;
 
   &__section {
     @include flex-grid-row();
@@ -17,7 +17,7 @@
     }
 
     &_highlighted {
-      color: $green;
+      color: $hr-green;
     }
   }
 
@@ -27,12 +27,12 @@
     width: 1.25rem;
     margin-right: 0.6rem;
     border-radius: 50%;
-    background-color: $gray;
+    background-color: $hr-gray;
     color: $white;
   }
 
   &__title-wrapper_highlighted &__title-icon {
-    background-color: $green;
+    background-color: $hr-green;
   }
 
   &__title {
@@ -65,7 +65,7 @@
   }
 
   &__contact-button {
-    color: $green;
+    color: $hr-green;
 
     &:hover,
     &:active {
@@ -91,7 +91,7 @@
       height: 6px;
       width: 6px;
       border-radius: 50%;
-      background-color: $dim-gray;
+      background-color: $hr-dim-gray;
     }
   }
 }
