--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -46,7 +46,7 @@
 
   &__sub-title {
     font-size: 0.8125rem;
-    color: $light-gray;
+    color: $hr-light-gray;
     font-weight: 600;
     margin-top: 1.5rem;
   }
@@ -65,7 +65,7 @@
   }
 
   &__button {
-    background: $dark-gray;
+    background: $hr-dark-gray;
     padding: 0.8rem 2.5rem;
     text-transform: uppercase;
     font-size: 0.8125rem;
@@ -96,12 +96,12 @@
   &__link {
     display: inline-block;
     width: 100%;
-    color: $dim-gray;
+    color: $hr-dim-gray;
     font-weight: 400;
     font-size: 0.8125rem;
     text-decoration: underline;
     &:hover {
-      color: $green;
+      color: $hr-green;
     }
   }
 }
@@ -142,7 +142,7 @@
     content: '\f00c';
     font-family: FontAwesome !important;
     font-size: 1rem;
-    color: $green;
+    color: $hr-green;
     right: 0;
     top: 3px;
   }
