--- a/src/styles/components/index_about.scss
+++ b/src/styles/components/index_about.scss
@@ -18,7 +18,7 @@
     &:after {
       width: 5px;
       height: 5px;
-      background: $silver-gray;
+      background: $hr-silver-gray;
       display: inline-block;
       content: '';
       border-radius: 50%;
@@ -34,7 +34,7 @@
 
   &__span {
     font-size: 1.125rem;
-    color: $dim-gray;
+    color: $hr-dim-gray;
     font-weight: 500;
     padding-left: 0.3rem;
     padding-right: 0.4rem;
