--- a/src/styles/components/leftbar_menu.scss
+++ b/src/styles/components/leftbar_menu.scss
@@ -12,9 +12,9 @@
     padding-left: 0.3rem;
     padding-right: 0.4rem;
     font-size: 0.9375rem;
-    color: $gray;
+    color: $hr-gray;
     &:hover {
-      color: $green;
+      color: $hr-green;
       font-weight: 400;
     }
   }
