--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -1,5 +1,5 @@
 .section {
-  margin: $block-padding auto;
+  margin: $hr-block-padding auto;
   @include flex();
   @include flex-grid-row();
   justify-content: center;
@@ -8,7 +8,7 @@
     width: 100%;
     padding: 0;
     max-width: 100%;
-    background: $green;
+    background: $hr-green;
   }
 
   &_padding {
@@ -33,14 +33,14 @@
     @include flex-grid-column(12);
     height: auto;
     position: relative;
-    padding-top: $block-padding;
-    padding-bottom: $block-padding;
+    padding-top: $hr-block-padding;
+    padding-bottom: $hr-block-padding;
     text-align: center;
   }
 
   &__in_padding {
-    padding-right: $row-padding;
-    padding-left: $row-padding;
+    padding-right: $hr-row-padding;
+    padding-left: $hr-row-padding;
     @include breakpoint(medium down) {
       padding-left: 0;
       padding-right: 0;
@@ -67,12 +67,12 @@
   }
 
   &__in_green {
-    background: $green;
+    background: $hr-green;
     padding-left: 0;
     padding-right: 0;
 
     &:before {
-      background: $green;
+      background: $hr-green;
     }
 
     @include breakpoint(medium down) {
@@ -95,14 +95,14 @@
     }
 
     .section__sidebar {
-      padding-top: $block-padding;
-      padding-bottom: $block-padding;
+      padding-top: $hr-block-padding;
+      padding-bottom: $hr-block-padding;
       background: #fbfbfb;
     }
 
     .section__content {
-      padding-top: $block-padding;
-      padding-bottom: $block-padding;
+      padding-top: $hr-block-padding;
+      padding-bottom: $hr-block-padding;
       background: #ffffff;
     }
   }
@@ -131,14 +131,14 @@
     }
 
     .section__sidebar {
-      padding-top: $block-padding;
-      padding-bottom: $block-padding;
+      padding-top: $hr-block-padding;
+      padding-bottom: $hr-block-padding;
       background: #fbfbfb;
     }
 
     .section__content {
-      padding-top: $block-padding;
-      padding-bottom: $block-padding;
+      padding-top: $hr-block-padding;
+      padding-bottom: $hr-block-padding;
       background: #ffffff;
 
       @include breakpoint(medium down) {
@@ -173,8 +173,8 @@
     background: $white;
 
     @include breakpoint(medium down) {
-      border-top: 1px solid $green;
-      border-bottom: 1px solid $green;
+      border-top: 1px solid $hr-green;
+      border-bottom: 1px solid $hr-green;
     }
   }
 
@@ -202,8 +202,8 @@
 
   &__sidebar_white {
     background: $white;
-    padding-top: $block-padding;
-    padding-bottom: $block-padding;
+    padding-top: $hr-block-padding;
+    padding-bottom: $hr-block-padding;
   }
 
   &__sidebar_right {
@@ -249,8 +249,8 @@
   &__content_small {
     @include flex-grid-column(7);
     background: $white;
-    padding-top: $block-padding;
-    padding-bottom: $block-padding;
+    padding-top: $hr-block-padding;
+    padding-bottom: $hr-block-padding;
 
     @include breakpoint(medium down) {
       @include flex-grid-column(12);
@@ -259,7 +259,7 @@
   }
 
   &__title {
-    color: $dark-gray;
+    color: $hr-dark-gray;
     font-weight: bold;
     font-size: 2.625rem;
     position: relative;
@@ -275,7 +275,7 @@
       margin: 10px auto;
       width: 15%;
       height: 3px;
-      background: $green;
+      background: $hr-green;
     }
   }
 
@@ -325,7 +325,7 @@
   }
 
   &__description {
-    color: $light-gray;
+    color: $hr-light-gray;
     font-weight: 500;
     text-align: center;
     margin-top: 0;
@@ -336,21 +336,21 @@
   }
 
   &__description_black {
-    color: $dim-gray;
+    color: $hr-dim-gray;
   }
 
   &__description-title {
     width: 100%;
     display: inline-block;
-    color: $dim-gray;
+    color: $hr-dim-gray;
     font-weight: 600;
     font-size: 1.125rem;
   }
 
   &__description-link {
-    border-bottom: 1px solid $silver-gray;
+    border-bottom: 1px solid $hr-silver-gray;
     display: inline-block;
-    color: $green;
+    color: $hr-green;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
     line-height: 1;
@@ -358,14 +358,14 @@
     &:hover,
     &:active,
     &:focus {
-      border-bottom: 1px solid $silver-gray;
+      border-bottom: 1px solid $hr-silver-gray;
       color: inherit;
       cursor: pointer;
     }
   }
 
   &__description-span {
-    color: $light-gray;
+    color: $hr-light-gray;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
   }
@@ -421,7 +421,7 @@
   }
 
   &__small-title {
-    color: $dark-gray;
+    color: $hr-dark-gray;
     font-weight: bold;
     font-size: 1.5rem;
     position: relative;
