--- a/src/styles/components/topbar_menu.scss
+++ b/src/styles/components/topbar_menu.scss
@@ -9,7 +9,7 @@
     &:after {
       width: 3px;
       height: 3px;
-      background: $silver-gray;
+      background: $hr-silver-gray;
       display: inline-block;
       content: '';
       border-radius: 50%;
@@ -28,14 +28,14 @@
     padding-left: 0.3rem;
     padding-right: 0.4rem;
     font-size: 0.9375rem;
-    color: $gray;
+    color: $hr-gray;
 
     &:hover {
-      color: $green;
+      color: $hr-green;
     }
   }
 
   &__link_active {
-    color: $green;
+    color: $hr-green;
   }
 }
