Color & font fixes

--- a/src/styles/components/index_carousel.scss
+++ b/src/styles/components/index_carousel.scss
@@ -7,7 +7,7 @@
   }
 
   &__title {
-    color: $hr-dim-gray;
+    color: $hr-gray;
     font-size: 1rem;
     display: inline-block;
     width: 100%;
