--- a/src/styles/components/comments.scss
+++ b/src/styles/components/comments.scss
@@ -72,7 +72,7 @@
   }
 
   &__sub-title {
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-size: 1.125rem;
     font-weight: 600;
     margin-top: 2rem;
