--- a/src/styles/components/content_nav.scss
+++ b/src/styles/components/content_nav.scss
@@ -5,7 +5,7 @@
     position: relative;
     padding-top: 1rem;
     margin-bottom: 0;
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: bold;
     font-size: 1rem;
     padding-left: 1rem;
@@ -59,7 +59,7 @@
   }
 
   &__item {
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 500;
     font-size: 0.9375rem;
     width: 100%;
@@ -84,7 +84,7 @@
     width: 100%;
     padding: 0.25rem 0;
     padding-left: 1rem;
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 500;
     font-size: 0.9375rem;
 
