--- a/src/styles/components/content_sublist.scss
+++ b/src/styles/components/content_sublist.scss
@@ -4,7 +4,7 @@
   list-style: none;
 
   li a {
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 400;
     font-size: 0.9375rem;
     display: inline-block;
