--- a/src/styles/components/faq.scss
+++ b/src/styles/components/faq.scss
@@ -24,7 +24,7 @@
   h5 {
     width: 100%;
     display: inline-block;
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 600;
     font-size: 1rem;
     margin-bottom: 0.15rem;
