--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -96,7 +96,7 @@
   &__link {
     display: inline-block;
     width: 100%;
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 400;
     font-size: 0.8125rem;
     &:hover {
