--- a/src/styles/components/index_about.scss
+++ b/src/styles/components/index_about.scss
@@ -34,7 +34,7 @@
 
   &__span {
     font-size: 1.125rem;
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 500;
     padding-left: 0.3rem;
     padding-right: 0.4rem;
