--- a/src/styles/components/index_hero.scss
+++ b/src/styles/components/index_hero.scss
@@ -101,7 +101,7 @@
   }
 
   &__form-title {
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: bold;
     font-size: 1.125rem;
     margin-bottom: 0;
@@ -111,7 +111,7 @@
     display: inline-block;
     width: 100%;
     font-size: 0.8125rem;
-    color: $hr-gray;
+    color: $hr-light-gray;
     font-weight: 300;
   }
 
