--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -13,7 +13,7 @@
   }
 
   &__title {
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: bold;
     font-size: 1.125rem;
     margin-bottom: 0;
