--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -338,7 +338,7 @@
   &__description-title {
     width: 100%;
     display: inline-block;
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 600;
     font-size: 1.125rem;
   }
@@ -369,7 +369,7 @@
   }
 
   &__description_large {
-    color: $hr-dim-gray;
+    color: $hr-dark-gray;
     font-weight: 500;
     font-size: 1.25rem;
   }
