--- a/src/styles/components/leftbar_menu.scss
+++ b/src/styles/components/leftbar_menu.scss
@@ -12,7 +12,7 @@
     padding-left: 0.3rem;
     padding-right: 0.4rem;
     font-size: 0.9375rem;
-    color: $hr-gray;
+    color: $hr-light-gray;
     &:hover {
       color: $hr-green;
       font-weight: 400;
