--- a/src/styles/components/topbar_menu.scss
+++ b/src/styles/components/topbar_menu.scss
@@ -28,7 +28,7 @@
     padding-left: 0.3rem;
     padding-right: 0.4rem;
     font-size: 0.9375rem;
-    color: $hr-gray;
+    color: $hr-dark-gray;
 
     &:hover {
       color: $hr-green;
