--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@
 @import 'base/_reset';
 
 @import 'components/app';
+@import 'components/app_info';
 @import 'components/apps';
 @import 'components/breadcrumbs_wrapper';
 @import 'components/button';
