--- a/src/styles/base/_constants.scss
+++ b/src/styles/base/_constants.scss
@@ -1,7 +1,8 @@
 // Colors
 $hr-green: #6db24f;
 $hr-dark-gray: #333333;
-$hr-light-gray: #666666;
+$hr-gray: #555555;
+$hr-light-gray: #777777;
 $hr-silver-gray: #cccccc;
 
 // Spacing
