--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@
 @import 'components/app';
 @import 'components/app_info';
 @import 'components/apps';
+@import 'components/articles';
 @import 'components/breadcrumbs_wrapper';
 @import 'components/button';
 @import 'components/call_summary';
@@ -40,3 +41,5 @@
 @import 'components/modal';
 @import 'components/section';
 @import 'components/topbar_menu';
+@import 'components/widget';
+@import 'components/recent-posts';
