Implement blog archives, fix build and add translations

--- a/src/styles/components/recent-posts.scss
+++ b/src/styles/components/recent-posts.scss
@@ -39,6 +39,10 @@
       &:hover {
         color: $hr-green;
       }
+
+      &.active {
+        color: $hr-green;
+      }
     }
   }
   &__hidden {
