--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -215,6 +215,13 @@
     }
   }
 
+  &__sidebar_fixed {
+    position: fixed;
+    width: 100%;
+    top: -1px;
+    box-shadow: 0px 3px 4px 2px rgba(109, 178, 79, 0.2);
+  }
+
   &__sidebar_logo {
     margin-bottom: 1rem;
     padding: 1rem;
