Fix contact form and add Toast component

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,5 +41,6 @@
 @import 'components/modal';
 @import 'components/section';
 @import 'components/topbar_menu';
+@import 'components/toast';
 @import 'components/widget';
 @import 'components/recent-posts';
