Fix scss file name

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,7 +39,7 @@
 @import 'components/leftbar_menu';
 @import 'components/mobile_bar';
 @import 'components/modal';
-@import 'components/recaptcha';
+@import 'components/grecaptcha_badge';
 @import 'components/section';
 @import 'components/topbar_menu';
 @import 'components/toast';
